# orq-python

./: .gitignore  .pypirc  CHANGELOG.md  LICENSE  README.md  RELEASES.md  USAGE.md  cases.py  example.py  mkdocs.yml  openapi-prerelease.yaml  openapi.yaml  orquesta.ipynb  playground.ipynb  private.txt  pylintrc  pyproject.toml  readme.md  setup.py  test.py  testa.py
.custom_packages/: README.md
.custom_packages/decorator/: __init__.py  context.py  decorators.py  span.py  utils.py
.custom_packages/decorator/examples/: basic_usage.py
.github/workflows/: sdk-generation-stable.yml  sdk_generation.yaml  sdk_generation.yml  sdk_generation_prerelease.yml  test.yml
.ipynb_checkpoints/: orquesta-checkpoint.ipynb
.speakeasy/: gen.yaml  workflow.yaml
.subpackages/openai_agents_instrumentation/: README.md  __init__.py  instrumentor.py  processor.py
docs/: conf.py  index.rst  modules.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  orquesta_sdk.doctree
docs/_build/html/: .buildinfo  (+8 more)
docs/models/: a2a.md  a2amessage.md  action.md  actionreviewedstreamingevent.md  actionreviewedstreamingeventtype.md  actionreviewrequestedstreamingevent.md  actionreviewrequestedstreamingeventdata.md  actionreviewrequestedstreamingeventtype.md  agenterroredstreamingeventtype.md  agentexecutionstartedstreamingevent.md  agentexecutionstartedstreamingeventtype.md  agenthandedoffstreamingeventtype.md  agenticchunker.md  agenticchunkerstrategy.md  agenticragconfig.md  agentinactivestreamingeventcompletiontokensdetails.md  agentinactivestreamingeventdata.md  agentinactivestreamingeventdatatype.md  agentinactivestreamingeventfinishreason.md  agentinactivestreamingeventfunction.md  agentinactivestreamingeventparts.md  agentinactivestreamingeventprompttokensdetails.md  agentinactivestreamingeventrole.md  agentinactivestreamingeventusage.md  agentmanifestsnapshot.md  agentmessagecreatedstreamingeventdata.md  agentmessagecreatedstreamingeventparts.md  agentmessagecreatedstreamingeventrole.md  agentmessagecreatedstreamingeventtype.md  agentsource.md  agentstartedstreamingevent.md  agentstartedstreamingeventdata.md  agentstartedstreamingeventexecuteon.md  agentstartedstreamingeventparts.md  agentstartedstreamingeventtype.md  agentthoughtstreamingeventaudio.md  agentthoughtstreamingeventcompletiontokensdetails.md  agentthoughtstreamingeventdata.md  agentthoughtstreamingeventdatarole.md  agentthoughtstreamingeventdatatype.md  (+6241 more)
orq_ai_sdk/: __init__.py  client.py  constants.py  exceptions.py  http_client.py  messages.py  models.py  test_messages.py  util.py  version.py
orq_ai_sdk/api_resources/: async_deployments.py  deployments.py
orquesta/src/: orquesta.py
orquesta_sdk/: __init__.py  cache.py  client.py  endpoints.py  exceptions.py  helpers.py  http_client.py  models.py  options.py  prompts.py  remote_config_kind.py  remote_configs.py  remoteconfigs.py  request.py  result.py  rule_type.py  rules.py  util.py  utils.py
orquesta_sdk/api_resources/: deployments.py
orquestadev/: __init__.py  base_client.py  orquesta.py  utils.py
orquestadev/orquesta_dev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
orquestadev/orquestadev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: prepare-readme.py  prepare_readme.py
source/: conf.py  configuration.rst  deployments.rst  index.rst  install.rst
src/: test_openai_agents_instrumentation.py
src/orq_ai_sdk/: _version.py  agents.py  annotations.py  apikeys.py  audio.py  basesdk.py  budgets.py  chat.py  chunking.py  completions.py  contacts.py  conversations.py  datasets.py  deployments.py  deployments_sdk.py  edits.py  embeddings.py  evals.py  evaluators.py  feedback.py  files.py  generations.py  identities.py  images.py  knowledge.py  memorystores.py  metrics.py  models_.py  moderations.py  openai_agents_instrumentation  orq_agents_responses.py  orq_completions.py  orq_responses.py  policies.py  projects.py  prompt.py  prompts.py  public.py  remoteconfig.py  remoteconfigs.py  (+13 more)
tests/: test_langchain_chain_roles.py  test_langchain_events.py  test_langchain_output_delta.py  test_langchain_tool_input.py  test_traced_decorator.py
(+447 files in other folders)
